--- a/html/Part1.html
+++ b/html/Part1.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML入門</title>
 </head>
+
 <body>
-    
+    <h1>This is a tag</h1> <!-- hタグ -->
+    <p>パタグラフ</p> <!-- pタグ　段落タグ -->
+    <a href="https://www.youtube.com/" target="_blank">YouTube</a> <!-- aタグ -->
+
+    <p>ネスト（入れ子）<a href="https://www.youtube.com/" target="_blank">YouTube</a></p>
 </body>
+
 </html>
